--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
+  flutter_bloc: ^9.1.0
+  bloc: ^9.0.0
+  dartz: ^0.10.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
